# HuffmanCoderDecoder

./: CMakeLists.txt  IDENTIFICATION.txt  README.txt  demo  presentation.url
app/: test_graph.cpp
lib/: huffmantree.cpp  main.cpp
